Fixed headline alignment

--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ a {
 .projects-header {
 	font-size: var(--title-size);
 	font-family: var(--font);
+	text-align: center;
 	color: white;
 }
 
